# nils-cli

./: .markdownlint-cli2.jsonc  AGENT_DOCS.toml  BINARY_DEPENDENCIES.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  rustfmt.toml
crates/agent-docs/: Cargo.toml  README.md
crates/agent-docs/docs/: README.md
crates/agent-docs/src/: cli.rs  completion.rs  config.rs  env.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  resolver.rs
crates/agent-docs/tests/: add.rs  baseline.rs  common.rs  completion_outside_repo.rs  config.rs  env_paths.rs  resolve_builtin.rs  resolve_checklist.rs  resolve_toml.rs  scaffold_agents.rs  scaffold_baseline.rs
crates/agent-provider-claude/: Cargo.toml  README.md
crates/agent-provider-claude/docs/: README.md
crates/agent-provider-claude/src/: adapter.rs  client.rs  config.rs  lib.rs  prompts.rs
crates/agent-provider-claude/tests/: adapter_contract.rs  client_contract.rs  config_contract.rs  dependency_boundary.rs  execute_contract.rs  live_smoke.rs  mock_contract.rs
crates/agent-provider-codex/: Cargo.toml  README.md
crates/agent-provider-codex/docs/: README.md
crates/agent-provider-codex/src/: adapter.rs  lib.rs
crates/agent-provider-codex/tests/: adapter_contract.rs  dependency_boundary.rs
crates/agent-provider-gemini/: Cargo.toml  README.md
crates/agent-provider-gemini/docs/: README.md
crates/agent-provider-gemini/src/: adapter.rs  lib.rs
crates/agent-provider-gemini/tests/: adapter_contract.rs  dependency_boundary.rs
crates/agent-runtime-core/: Cargo.toml  README.md
crates/agent-runtime-core/docs/: README.md
crates/agent-runtime-core/src/: lib.rs  provider.rs  schema.rs
crates/agent-runtime-core/tests/: provider_contract.rs
crates/agentctl/: Cargo.toml  README.md
crates/agentctl/docs/: README.md
crates/agentctl/src/: cli.rs  completion.rs  lib.rs  main.rs
crates/agentctl/tests/: completion_outside_repo.rs  debug_bundle.rs  diag_capabilities.rs  diag_doctor.rs  dispatch.rs  provider_commands.rs  provider_registry.rs  run_from_dispatch.rs  workflow_automation_steps.rs  workflow_run.rs
crates/api-gql/: Cargo.toml  README.md
crates/api-gql/docs/: README.md
crates/api-gql/src/: cli.rs  main.rs  util.rs
crates/api-gql/tests/: cli_smoke.rs  completion_outside_repo.rs  env_and_auth_resolution.rs  history.rs  integration.rs  schema_command.rs
crates/api-rest/: Cargo.toml  README.md
crates/api-rest/docs/: README.md
crates/api-rest/src/: cli.rs  main.rs  test_support.rs  util.rs
crates/api-rest/tests/: auth_resolution.rs  cli_smoke.rs  completion_outside_repo.rs  endpoint_resolution.rs  history.rs  integration.rs  report.rs  report_from_cmd.rs  schema_edges.rs  setup_resolution.rs
crates/api-test/: Cargo.toml  README.md
crates/api-test/docs/: README.md
crates/api-test/src/: completion.rs  lib.rs  main.rs  suite_schema.rs
crates/api-test/tests/: cli_smoke.rs  completion_outside_repo.rs  e2e.rs  grpc_integration.rs  progress_contract.rs
crates/api-testing-core/: Cargo.toml  README.md
crates/api-testing-core/docs/: README.md
crates/api-testing-core/src/: auth_env.rs  cli_endpoint.rs  cli_history.rs  cli_io.rs  cli_report.rs  cli_util.rs  cmd_snippet.rs  config.rs  env_file.rs  history.rs  http.rs  jq.rs  jwt.rs  lib.rs  markdown.rs  redact.rs  report.rs
crates/api-testing-core/tests/: cli_endpoint.rs  cli_history.rs  cli_io.rs  cli_report.rs  cli_util.rs  config_resolution.rs  fixtures_smoke.rs  report_history.rs  suite_cleanup_graphql.rs  suite_rest_graphql_matrix.rs  suite_runner_grpc_matrix.rs  suite_runner_loopback.rs  suite_runner_websocket_matrix.rs
crates/api-websocket/: Cargo.toml  README.md
crates/api-websocket/docs/: README.md
crates/api-websocket/src/: cli.rs  main.rs
crates/api-websocket/tests/: cli_smoke.rs  completion_outside_repo.rs  integration.rs  json_contract.rs
crates/claude-cli/: Cargo.toml  README.md
crates/claude-cli/docs/: README.md
crates/claude-cli/src/: agent.rs  auth.rs  cli.rs  completion.rs  config.rs  diag.rs  lib.rs  main.rs
crates/claude-cli/tests/: agent_commands.rs  auth_diag_config.rs
crates/claude-core/: Cargo.toml  README.md
crates/claude-core/docs/: README.md
crates/claude-core/src/: exec.rs  lib.rs
crates/claude-core/tests/: client_contract.rs  config_contract.rs  exec_contract.rs  prompts_contract.rs
crates/cli-template/: Cargo.toml  README.md
crates/cli-template/docs/: README.md
crates/cli-template/src/: main.rs
crates/cli-template/tests/: cli.rs
crates/codex-cli/: Cargo.toml  README.md
crates/codex-cli/docs/: README.md
crates/codex-cli/src/: cli.rs  config.rs  diag_output.rs  fs.rs  json.rs  jwt.rs  lib.rs  main.rs  paths.rs  provider_profile.rs
crates/codex-cli/tests/: agent_commit.rs  agent_exec.rs  agent_prompt.rs  agent_templates.rs  auth_auto_refresh.rs  auth_current_sync.rs  auth_json_contract.rs  auth_json_contract_more.rs  auth_login.rs  auth_refresh.rs  auth_remove.rs  auth_save.rs  auth_use.rs  completion_contract.rs  completion_flags_contract.rs  completion_smoke.rs  config.rs  diag_json_contract.rs  dispatch.rs  fs.rs  json.rs  jwt.rs  main_entrypoint.rs  parity_oracle.rs  paths.rs  prompt_segment_cached.rs  prompt_segment_refresh.rs  prompts.rs  rate_limits_all.rs  rate_limits_ansi.rs  rate_limits_async.rs  rate_limits_client.rs  rate_limits_client_more.rs  rate_limits_network.rs  rate_limits_render.rs  rate_limits_single.rs  (+6 more)
crates/fzf-cli/: Cargo.toml  README.md
crates/gemini-cli/: Cargo.toml  README.md
crates/gemini-core/: Cargo.toml  README.md
crates/git-cli/: Cargo.toml  README.md
crates/git-lock/: Cargo.toml  README.md
crates/git-scope/: Cargo.toml  README.md
crates/git-summary/: Cargo.toml  README.md
crates/image-processing/: Cargo.toml  README.md
crates/macos-agent/: Cargo.toml  README.md
crates/memo-cli/: Cargo.toml  README.md
crates/nils-common/: Cargo.toml  README.md
crates/nils-term/: Cargo.toml  README.md
crates/nils-test-support/: Cargo.toml  README.md
crates/plan-issue-cli/: Cargo.toml  README.md
(+1060 files in other folders)
