[workspace]
members = [
  "crates/nils-common",
  "crates/nils-term",
  "crates/nils-test-support",
  "crates/cli-template",
  "crates/codex-cli",
  "crates/fzf-cli",
  "crates/git-scope", "crates/git-summary", "crates/git-lock", "crates/git-cli",
  "crates/image-processing",
  "crates/api-testing-core",
  "crates/api-rest",
  "crates/api-gql",
  "crates/api-test",
  "crates/semantic-commit",
  "crates/plan-tooling",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.1"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
directories = "5"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
