[workspace]
members = [
  "crates/nils-common",
  "crates/nils-term",
  "crates/nils-test-support",
  "crates/cli-template",
  "crates/codex-cli",
  "crates/fzf-cli",
  "crates/git-scope", "crates/git-summary", "crates/git-lock", "crates/git-cli",
  "crates/image-processing",
  "crates/macos-agent",
  "crates/screen-record",
  "crates/api-testing-core",
  "crates/api-rest",
  "crates/api-gql",
  "crates/api-test",
  "crates/semantic-commit",
  "crates/plan-tooling",
  "crates/agent-docs",
  "crates/agent-runtime-core",
  "crates/agent-provider-codex",
  "crates/agent-provider-claude",
  "crates/agent-provider-gemini",
  "crates/agentctl",
]
resolver = "2"

[workspace.package]
# Track the edition for all workspace crates in one place. Individual
# crates can still override this value, but keeping it here means new
# crates created with `cargo new -w ...` automatically inherit the 2024
# edition.
edition = "2024"
license = "MIT"
version = "0.3.1"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
directories = "5"
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.18"
