[package]
name = "agent-docs"
version = "0.3.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
