[package]
name = "nils-agent-docs"
version = "0.3.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-agent-docs in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_docs"
path = "src/lib.rs"

[[bin]]
name = "agent-docs"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.23"

[dev-dependencies]
tempfile = "3"
