[package]
name = "nils-agent-docs"
version = "0.5.3"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-agent-docs in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_docs"
path = "src/lib.rs"

[[bin]]
name = "agent-docs"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
directories = { workspace = true }
nils-common = { version = "0.5.3", path = "../nils-common", package = "nils-common" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.25"

[dev-dependencies]
nils-test-support = { version = "0.5.3", path = "../nils-test-support" }
tempfile = "3"
