[package]
name = "nils-agent-provider-claude"
version = "0.3.9"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-agent-provider-claude in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_provider_claude"
path = "src/lib.rs"
[dependencies]
agent-runtime-core = { version = "0.3.0", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
