[package]
name = "agent-provider-codex"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
agent-runtime-core = { path = "../agent-runtime-core" }
codex-cli = { path = "../codex-cli" }
nils-common = { path = "../nils-common" }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
