[package]
name = "nils-agent-provider-codex"
version = "0.4.2"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-agent-provider-codex in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_provider_codex"
path = "src/lib.rs"
[dependencies]
agent-runtime-core = { version = "0.4.2", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
codex-cli = { version = "0.4.2", path = "../codex-cli", package = "nils-codex-cli" }
nils-common = { version = "0.4.2", path = "../nils-common", package = "nils-common" }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.4.2", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
