[package]
name = "nils-agent-provider-gemini"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-agent-provider-gemini in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_provider_gemini"
path = "src/lib.rs"
[dependencies]
agent-runtime-core = { version = "0.4.5", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
