[package]
name = "nils-agent-provider-gemini"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-agent-provider-gemini in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_provider_gemini"
path = "src/lib.rs"
[dependencies]
agent-runtime-core = { version = "0.4.5", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
gemini-core = { version = "0.4.5", path = "../gemini-core", package = "nils-gemini-core" }
nils-common = { version = "0.4.5", path = "../nils-common", package = "nils-common" }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.4.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
