[package]
name = "nils-agent-runtime-core"
version = "0.4.2"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-agent-runtime-core in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agent_runtime_core"
path = "src/lib.rs"
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
