[package]
name = "agentctl"
version = "0.2.11"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true }
agent-provider-codex = { path = "../agent-provider-codex" }
agent-provider-claude = { path = "../agent-provider-claude" }
agent-provider-gemini = { path = "../agent-provider-gemini" }
agent-runtime-core = { path = "../agent-runtime-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
