[package]
name = "agentctl"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
agent-provider-codex = { path = "../agent-provider-codex" }
agent-provider-claude = { path = "../agent-provider-claude" }
agent-provider-gemini = { path = "../agent-provider-gemini" }
agent-runtime-core = { path = "../agent-runtime-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
