[package]
name = "nils-agentctl"
version = "0.4.1"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-agentctl in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "agentctl"
path = "src/lib.rs"

[[bin]]
name = "agentctl"
path = "src/main.rs"
[dependencies]
clap = { workspace = true }
agent-provider-codex = { version = "0.4.1", path = "../agent-provider-codex", package = "nils-agent-provider-codex" }
agent-provider-claude = { version = "0.4.1", path = "../agent-provider-claude", package = "nils-agent-provider-claude" }
agent-provider-gemini = { version = "0.4.1", path = "../agent-provider-gemini", package = "nils-agent-provider-gemini" }
agent-runtime-core = { version = "0.4.1", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
nils-common = { version = "0.4.1", path = "../nils-common", package = "nils-common" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.4.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
