[package]
name = "api-gql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
api-testing-core = { path = "../api-testing-core" }
clap = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"
