[package]
name = "nils-api-gql"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-api-gql in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "api-gql"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
api-testing-core = { version = "0.4.5", path = "../api-testing-core", package = "nils-api-testing-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-term = { version = "0.4.5", path = "../nils-term", package = "nils-term" }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.4.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
