[package]
name = "api-rest"
version = "0.3.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
api-testing-core = { path = "../api-testing-core" }
clap = { workspace = true }
nils-term = { path = "../nils-term" }
serde_json = { workspace = true }

[dev-dependencies]
base64 = "0.22"
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
