[package]
name = "nils-api-rest"
version = "0.4.4"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-api-rest in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "api-rest"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
api-testing-core = { version = "0.4.4", path = "../api-testing-core", package = "nils-api-testing-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-term = { version = "0.4.4", path = "../nils-term", package = "nils-term" }
serde_json = { workspace = true }

[dev-dependencies]
base64 = "0.22"
nils-test-support = { version = "0.4.4", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
