[package]
name = "api-test"
version = "0.2.11"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
api-testing-core = { path = "../api-testing-core" }
clap = { workspace = true }
nils-term = { path = "../nils-term" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
