[package]
name = "api-testing-core"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
jaq-core = "3.0.0-beta"
jaq-json = { version = "2.0.0-beta", features = ["serde"] }
jaq-std = "3.0.0-beta"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
shell-words = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }
nils-term = { path = "../nils-term" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
