[package]
name = "nils-api-testing-core"
version = "0.4.1"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-api-testing-core in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "api_testing_core"
path = "src/lib.rs"
[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
jaq-core = "3.0.0-beta"
jaq-json = { version = "2.0.0-beta", features = ["serde"] }
jaq-std = "3.0.0-beta"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
shell-words = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tungstenite = { version = "0.23", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
nils-term = { version = "0.4.1", path = "../nils-term", package = "nils-term" }

[dev-dependencies]
nils-test-support = { version = "0.4.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
