[package]
name = "nils-api-testing-core"
version = "0.6.6"
edition.workspace = true
license.workspace = true

description = "Library crate for nils-api-testing-core in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"

[lib]
name = "api_testing_core"
path = "src/lib.rs"
[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
jaq-core = "3.0.0-gamma"
jaq-json = { version = "2.0.0-gamma", features = ["serde"] }
jaq-std = "3.0.0-gamma"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "multipart", "rustls"] }
shell-words = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tungstenite = { version = "0.29", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
nils-common = { version = "0.6.6", path = "../nils-common", package = "nils-common" }
nils-term = { version = "0.6.6", path = "../nils-term", package = "nils-term" }

[dev-dependencies]
nils-test-support = { version = "0.6.6", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
