[package]
name = "nils-api-websocket"
version = "0.5.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-api-websocket in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "api-websocket"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
api-testing-core = { version = "0.5.5", path = "../api-testing-core", package = "nils-api-testing-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-term = { version = "0.5.5", path = "../nils-term", package = "nils-term" }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.5.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
tungstenite = { version = "0.28", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
