[package]
name = "nils-claude-cli"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-claude-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "claude_cli"
path = "src/lib.rs"

[[bin]]
name = "claude-cli"
path = "src/main.rs"

[dependencies]
agent-provider-claude = { version = "0.4.5", path = "../agent-provider-claude", package = "nils-agent-provider-claude" }
agent-runtime-core = { version = "0.4.5", path = "../agent-runtime-core", package = "nils-agent-runtime-core" }
claude-core = { version = "0.4.5", path = "../claude-core", package = "nils-claude-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nils-common = { version = "0.4.5", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.4.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
