[package]
name = "cli-template"
version = "0.2.11"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nils-common = { path = "../nils-common" }
nils-term = { path = "../nils-term" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
