[package]
name = "cli-template"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nils-common = { path = "../nils-common" }
nils-term = { path = "../nils-term" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
