[package]
name = "nils-cli-template"
version = "0.3.2"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-cli-template in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "cli-template"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nils-common = { version = "0.3.0", path = "../nils-common", package = "nils-common" }
nils-term = { version = "0.3.0", path = "../nils-term", package = "nils-term" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
