[package]
name = "codex-cli"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = { workspace = true }
sha2 = "0.10"
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
