[package]
name = "nils-codex-cli"
version = "0.5.3"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-codex-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "codex_cli"
path = "src/lib.rs"

[[bin]]
name = "codex-cli"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { workspace = true }
clap_complete = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
nils-term = { version = "0.5.3", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.5.3", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.5.3", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
