[package]
name = "fzf-cli"
version = "0.2.11"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
