[package]
name = "nils-fzf-cli"
version = "0.6.2"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-fzf-cli in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"

[[bin]]
name = "fzf-cli"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-term = { version = "0.6.2", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.6.2", path = "../nils-common", package = "nils-common" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
nils-test-support = { version = "0.6.2", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
