[package]
name = "nils-gemini-cli"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-gemini-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "gemini_cli"
path = "src/lib.rs"

[[bin]]
name = "gemini-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
gemini-core = { version = "0.4.5", path = "../gemini-core", package = "nils-gemini-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
nils-test-support = { version = "0.4.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
