[package]
name = "nils-gemini-cli"
version = "0.6.1"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-gemini-cli in the nils-cli workspace."
repository = "https://github.com/sympoies/nils-cli"

[lib]
name = "gemini_cli"
path = "src/lib.rs"

[[bin]]
name = "gemini-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nils-common = { version = "0.6.1", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.6.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
