[package]
name = "nils-gemini-core"
version = "0.4.5"
edition.workspace = true
license.workspace = true

description = "Runtime core primitives shared by gemini-cli and gemini provider crates."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "gemini_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
serde_json = { workspace = true }
thiserror = { workspace = true }
nils-common = { version = "0.4.5", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.4.5", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
