[package]
name = "git-cli"
version = "0.2.9"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
nils-common = { path = "../nils-common" }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
