[package]
name = "nils-git-cli"
version = "0.5.2"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-git-cli in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[lib]
name = "git_cli"
path = "src/lib.rs"

[[bin]]
name = "git-cli"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-common = { version = "0.5.2", path = "../nils-common", package = "nils-common" }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
nils-test-support = { version = "0.5.2", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
