[package]
name = "git-lock"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
tempfile = "3"
pretty_assertions = { workspace = true }
