[package]
name = "git-lock"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
tempfile = "3"
pretty_assertions = { workspace = true }
