[package]
name = "nils-git-lock"
version = "0.4.3"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-git-lock in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "git-lock"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nils-term = { version = "0.4.3", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.4.3", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.4.3", path = "../nils-test-support" }
tempfile = "3"
pretty_assertions = { workspace = true }
