[package]
name = "git-scope"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
tempfile = "3"
