[package]
name = "nils-git-scope"
version = "0.3.8"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-git-scope in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "git-scope"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nils-term = { version = "0.3.0", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.3.0", path = "../nils-common", package = "nils-common" }
tempfile = "3"

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
