[package]
name = "nils-git-scope"
version = "0.5.3"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-git-scope in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "git-scope"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
nils-term = { version = "0.5.3", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.5.3", path = "../nils-common", package = "nils-common" }
tempfile = "3"

[dev-dependencies]
nils-test-support = { version = "0.5.3", path = "../nils-test-support" }
