[package]
name = "git-summary"
version = "0.2.11"
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nils-term = { path = "../nils-term" }
nils-common = { path = "../nils-common" }

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
