[package]
name = "nils-git-summary"
version = "0.4.1"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-git-summary in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "git-summary"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
nils-term = { version = "0.4.1", path = "../nils-term", package = "nils-term" }
nils-common = { version = "0.4.1", path = "../nils-common", package = "nils-common" }

[dev-dependencies]
nils-test-support = { version = "0.4.1", path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
