[package]
name = "image-processing"
version = "0.3.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
globset = "0.4"
nils-common = { path = "../nils-common" }
nils-term = { path = "../nils-term" }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
