[package]
name = "nils-image-processing"
version = "0.3.5"
edition.workspace = true
license.workspace = true

description = "CLI crate for nils-image-processing in the nils-cli workspace."
repository = "https://github.com/graysurf/nils-cli"

[[bin]]
name = "image-processing"
path = "src/main.rs"
[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
globset = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
nils-common = { version = "0.3.0", path = "../nils-common", package = "nils-common" }
nils-term = { version = "0.3.0", path = "../nils-term", package = "nils-term" }
resvg = "0.47"
roxmltree = "0.20"
usvg = "0.47"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
nils-test-support = { path = "../nils-test-support" }
pretty_assertions = { workspace = true }
tempfile = "3"
